# package-manager-detector-rs

./: .env  Cargo.toml  LICENSE  README.md  package.json
src/: commands.rs  constants.rs  detect.rs  lib.rs  main.rs  types.rs
src/tests/: mod.rs
src/tests/commands/: npm_run.rs
src/tests/commands/snapshots/: package_manager_detector_rs__tests__commands__npm_run__deno_run_multiple_argument.snap  package_manager_detector_rs__tests__commands__npm_run__deno_run_single_argument.snap  package_manager_detector_rs__tests__commands__npm_run__empty_args.snap  package_manager_detector_rs__tests__commands__npm_run__npm_multiple_arguments.snap  (+3 more)
src/tests/detect/: lookup.rs  parse_package_json.rs
tests/: tests.rs
tests/commands/: npm_run.rs
tests/commands/snapshots/: tests__commands__npm_run__empty_args.snap  tests__commands__npm_run__npm_multiple_arguments.snap  tests__commands__npm_run__npm_single_argument.snap  tests__commands__npm_run__yarn_multiple_arguments.snap  tests__commands__npm_run__yarn_single_argument.snap
tests/detect/: lookup.rs  parse_package_json.rs
tests/detect/snapshots/: tests__detect__lookup__it_works.snap  tests__detect__parse_package_json__other_known_agents-2.snap  tests__detect__parse_package_json__other_known_agents.snap  tests__detect__parse_package_json__pnpm_v6.snap  tests__detect__parse_package_json__pnpm_v7_plus.snap  tests__detect__parse_package_json__unknown_agent_without_callback.snap  tests__detect__parse_package_json__yarn_v1.snap  tests__detect__parse_package_json__yarn_v2_plus.snap
(+8 files in other folders)
