[package]
name = "package-manager-detector-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
regex = "1.11.1"
dotenv = "0.15.0"
tempfile = "3.14.0"
dunce = "1.0.5"
phf = { version = "0.11.2", features = ["macros"] }

[dev-dependencies]
insta = "1.41.1"
