[package]
version = "0.2.5"
name = "package_manager_detector_rs"
description = "Detect the package manager in use by identifying the associated package.json or lockfile."
repository = "https://github.com/oxwazz/package_manager_detector_rs"
license = "MIT"
homepage = "https://github.com/oxwazz/package_manager_detector_rs"
authors = ["Muhammad Rahmahalim <muhammad.rahmahalim@gmail.com>"]
edition = "2021"
keywords = ["npm", "yarn", "bun", "pnpm", "deno"]

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
regex = "1.11.1"
tempfile = "3.14.0"
dunce = "1.0.5"
phf = { version = "0.11.2", features = ["macros"] }

[dev-dependencies]
insta = "1.41.1"
